--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,7 @@
   
   .event-card button {
     width: 100%;
+    margin-bottom: 5px;
   }
   
   /* Modal Styling */
@@ -190,4 +191,5 @@
   .close:focus {
     color: #000;
     text-decoration: none;
-  }  
+  }
+  
